@@ -1,6 +1,6 @@
 package NCO_rgr;
 
-# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.290 2013-07-01 22:25:06 pvicente Exp $
+# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.291 2013-07-01 22:59:59 pvicente Exp $
 
 # Purpose: All REGRESSION tests for NCO operators
 # BENCHMARKS are coded in "NCO_benchmarks.pm"
@@ -2235,6 +2235,7 @@ print "\n";
 # two_dmn_var (lat,lev) no MSA (associated coordinates)
 # ncpdq -O -a lev,lat -v two_dmn_var in.nc out.nc
 # ncks  -C -d lat,1,1 -d lev,1,1 out.nc
+#$tst_cmd[2]="lev[1]=500 lat[1]=90 two_dmn_var[3]=17.5 fraction";
 
   $tst_cmd[0]="ncpdq $omp_flg -O $fl_fmt $nco_D_flg -a lev,lat -v two_dmn_var $in_pth_arg in.nc %tmp_fl_00%";
   $tst_cmd[1]="ncks -C -v two_dmn_var -d lat,1,1 -d lev,1,1 %tmp_fl_00%";
@@ -2542,6 +2543,32 @@ print "\n";
    $#tst_cmd=0; # Reset array    
  
  
+#NEW NCO 4.3.2
+#ncpdq #12
+# two_dmn_var (lat,lev) no -C, no MSA
+# ncpdq -O -a lev,lat -v two_dmn_var in.nc out.nc
+# ncks  -C -d lat,1,1 -d lev,1,1 out.nc
+#$tst_cmd[2]="lev[1]=500 lat[1]=90 two_dmn_var[3]=17.5 fraction";
+
+# same as previous but with group
+    
+#NEW NCO 4.3.2
+#ncpdq #33
+# group: g19 { 
+# dimensions:lat=2;lev=3;lon=4;time=unlimited;
+#ncpdq #12
+# two_dmn_var (lat,lev) no -C, no MSA 
+# ncpdq -O -g g19g1 -a lev,lat -v two_dmn_var in_grp_3.nc out.nc
+# ncks -C -g g19g1 -v two_dmn_var -d lat,1,1 -d lev,1,1 out.nc
+# lev[1]=500 lat[1]=90 two_dmn_var[3]=17.5 fraction
+
+   $tst_cmd[0]="ncpdq $omp_flg $fl_fmt $nco_D_flg -O -g g19g1 -a lev,lat -v two_dmn_var $in_pth_arg in_grp_3.nc %tmp_fl_00%";
+   $tst_cmd[1]="ncks -C -g g19g1 -v two_dmn_var -d lat,1,1 -d lev,1,1 %tmp_fl_00%";
+   $dsc_sng="(Groups) Re-order 2D variable (no -C , no MSA) -v two_dmn_var -a lev,lat";
+   $tst_cmd[2]="lev[1]=500 lat[1]=90 two_dmn_var[3]=17.5 fraction";
+   $tst_cmd[3]="SS_OK";
+   if($mpi_prc == 0 || ($mpi_prc > 0 && !($localhostname =~ /pbs/))){NCO_bm::tst_run(\@tst_cmd);} # ncpdq hangs with MPI TODO nco772
+   $#tst_cmd=0; # Reset array    
     
     
     
