@@ -1,3 +1,9 @@
+2013-07-01 Pedro Vicente  <pvicente@uci.edu>
+
+	* Add in_grp_3.cdl group data for ncpdq testing
+  
+	* Add ncpdq test #33 (Groups) Re-order 2D variable (no -C , no MSA)
+
 2013-06-29  Charlie Zender  <zender@uci.edu>
 
 	* Add -G, --gpe, --unn to ncpdq documentation
